update: index.html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Banana Translation</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Banana Translation App</h1>
+    <textarea id="inputText" placeholder="Write here to translate"></textarea>
+    <button id="translateBtn">Translate</button>
+    <textarea id="outputText"></textarea>
+</body>
 </html>
