--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Banana Translation</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1>Banana Translation App</h1>
-    <textarea id="inputText" placeholder="Write here to translate"></textarea>
-    <button id="translateBtn">Translate</button>
-    <textarea id="outputText"></textarea>
-</body>
+    <textarea id="txt-input" placeholder="Write here to translate"></textarea>
+    <button id="btn-translate">Translate</button>
+
+    <h2>output will come down here</h2>
+    <div id="output"></div>
+    <script src="app.js" type="text/javascript"></script>
+  </body>
 </html>
